# advent-of-code-2022

./: .gitignore  LICENSE  README.md  adventofcode2022.cabal  cabal.project  default.nix  stack.yaml
run/: Spec.hs
src/help/: Common.hs
src/main/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day20.hs
test/: Test01.hs  Test02.hs  Test03.hs  Test04.hs  Test05.hs  Test06.hs  Test07.hs  Test08.hs  Test09.hs  Test10.hs  Test11.hs  Test12.hs  Test13.hs  Test20.hs
